<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cl_configure_keyboard_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="0dp">

    <com.google.android.gms.ads.AdView
      xmlns:ads="http://schemas.android.com/apk/res-auto"
      android:id="@+id/banner_ad_view_configure_remote_control"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      ads:adSize="BANNER"
      ads:adUnitId="ca-app-pub-3009958898657292/7739743399" />

    <ImageView
        android:id="@+id/delete_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_delete_forever_black_50dp"
        android:elevation="200dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/resize_on_off_button"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/resize_on_off_button_default_text"
        android:textSize="12sp"
        android:padding="0dp"
        android:layout_margin="0dp"
        android:textAllCaps="false"
        android:background="@drawable/configure_remote_control_option_button"
        android:elevation="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/add_key"/>

    <Button
        android:id="@+id/add_key"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/add_key_button_text"
        android:textSize="12sp"
        android:padding="0dp"
        android:layout_margin="0dp"
        android:textAllCaps="false"
        android:background="@drawable/configure_remote_control_option_button"
        android:elevation="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/resize_on_off_button"
        app:layout_constraintEnd_toStartOf="@+id/add_touch_pad"/>

    <Button
        android:id="@+id/add_touch_pad"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/add_touch_pad_button_text"
        android:textSize="12sp"
        android:padding="0dp"
        android:layout_margin="0dp"
        android:textAllCaps="false"
        android:background="@drawable/configure_remote_control_option_button"
        android:elevation="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/add_key"
        app:layout_constraintEnd_toStartOf="@+id/done"/>

    <ImageView
        android:id="@+id/done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_done_black_50dp"
        android:elevation="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</android.support.constraint.ConstraintLayout>
